src/objects/cp_KPI__c.object
<CustomObject>
    <description>CP</description>
    <fields>
        <fullName>Date_Achieved__c</fullName>
        <label>Date Achieved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <referenceTo>cp_Event__c</referenceTo>
        <relationshipLabel>KPIs</relationshipLabel>
        <relationshipName>KPIs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>KPI_Level1__c</fullName>
        <label>KPI Level 1</label>
        <picklist>
            <picklistValues>
                <fullName>Use globally coordinated activity eg Big Moments to create impact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitively shape public policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prioritise our employees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70/30 Split of &apos;Local&apos; / Global effort &amp; focus on top 3 issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brilliant basics to professionalise our function</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>KPI_Level2__c</fullName>
        <label>KPI Level 2</label>
        <picklist>
            <picklistValues>
                <fullName>% Tier 1 KOF actively engaged/advocating Unilever</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media metric (amount of coverage, % favourable on sustainability, innovation, sustainable brands)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At least 5 out of 10 top markets participating coordinated activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>% positive comments in qualitative feedback and % positive action taken via digital media tools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>% top 10 markets actively lobbying on priority global advocacy campaign(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revenue generated from Foundation related activities - eg CRM/external funding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100% compliance of issues management procedure verified via issues log</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>% issues on plan against stated objectives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>% increase in employees advocating Unilever product brands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>% employees actively engaged in Foundation activities and target reached of funds raised</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>% employees engaged in recognition programmes eg Heroes programme, Compass Awards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100% compliance look and feel to Unilever Brand ID and aligned to global editorial calendar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>% increase in number of tier one KOFs or priority media outlets directly and/or personally engaged in Unilever showcasing at least 3 &quot;big bets&quot; / business priorities and their contribution to sustainable growth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Top 3 business issues per Cluster/MCO /Function /Category action plans in place with positive progress demonstrated to mitigate risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 &quot;big bets&quot; / business priorities supported with internal campaigns driving positive advocacy scores (1-5 scale)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GPS score improvement on identified function/category /MCO focus area eg leadership communications / bias for action / line manager effectiveness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Positive SOV in relation to sustainability / sustainable living mentions in key media vs key competitors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital channels compliance: &lt; % errors tracking on external Websites / - add SharePoint analytic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100% compliance in completing capability programme with XX% employees attaining &gt;80% in completion test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100% compliance planning process: - Plan on a Page / - Local Plans [70%] Reflecting Top 3 Business Issues &amp; Priorities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Function</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expertise</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>KPI_Level3__c</fullName>
        <label>KPI Level 3</label>
        <picklist>
            <picklistValues>
                <fullName>KPI x1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KPI x2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KPI x3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>KPI_Other__c</fullName>
        <inlineHelpText>// Remember to add Validation Rule for &quot;other&quot;</inlineHelpText>
        <label>KPI Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KPI_Progress_Detail__c</fullName>
        <label>KPI Progress Detail</label>
        <picklist>
            <controllingField>KPI_Progress_Status__c</controllingField>
            <picklistValues>
                <fullName>Resource Constraints</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>KPI_Progress_Other__c</fullName>
        <label>KPI Progress (Other)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KPI_Progress_Status__c</fullName>
        <label>KPI Progress Status</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>KPI_Status__c</fullName>
        <description>Traffic Icons for KPI Status</description>
        <formula>IMAGE( 
CASE( KPI_Progress_Status__c , 
&quot;Green&quot;, &quot;/img/samples/light_green.gif&quot;,
&quot;Amber&quot;, &quot;/img/samples/light_yellow.gif&quot;,
&quot;Red&quot;, &quot;/img/samples/light_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;KPI Status Color&quot;)</formula>
        <label>KPI Status</label>
        <type>Text</type>
    </fields>
    <label>KPI</label>
    <nameField>
        <displayFormat>KPI-{000000}</displayFormat>
        <label>KPI</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KPIs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>KPI_Level1_Other_is_populated</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(KPI_Level1__c, &quot;Other&quot;) &amp;&amp;  ISBLANK(KPI_Other__c)</errorConditionFormula>
        <errorDisplayField>KPI_Other__c</errorDisplayField>
        <errorMessage>Please enter a KPI description</errorMessage>
    </validationRules>
</CustomObject>